--- a/10.2.0/aspnet-core/src/EMRSystem.Web.Host/Templates/DischargeSummary.html
+++ b/10.2.0/aspnet-core/src/EMRSystem.Web.Host/Templates/DischargeSummary.html
@@ -129,10 +129,10 @@
 
         <!-- Treatment -->
         
-            <div class="section-title">Treatment Given During Stay</div>
+            <!--<div class="section-title">Treatment Given During Stay</div>
             <div>
                 {{TreatmentSummary}}
-            </div>
+            </div>-->
         
 
         <!-- Investigations -->
