--- a/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
@@ -50,22 +50,22 @@
                         [paginator]="false" [lazy]="true">
                         <ng-template #header>
                             <tr>
-                                <th style="min-width: 150px" pSortableColumn="patientName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="patientName">
                                     Patient
                                     <p-sortIcon field="patientName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
                                     Doctor
                                     <p-sortIcon field="doctorName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Date
                                     <!-- <p-sortIcon field="name"></p-sortIcon> pSortableColumn="name" -->
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Medications
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     {{ 'Actions' | localize }}
                                 </th>
                             </tr>
@@ -73,28 +73,28 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.patient.fullName }}
                                     </span>
                                 </td>
-                                <td *ngIf="showDoctorColumn">
+                                <td class="text-center" *ngIf="showDoctorColumn">
                                     <span>
                                         Dr. {{ record.doctor.fullName }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.issueDate| date: 'dd/MM/yyyy' }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <div *ngFor="let itm of record.items">
                                         <span>{{ itm.medicineName}} {{itm.dosage}} ({{itm.frequency}})</span>
                                     </div>
                                     <div *ngIf="record.items.length<=0">NA</div>
                                 </td>
-                                <td>
+                                <td class="text-center">
 
                                     <button class="btn btn-sm border rounded-1 px-3" type="button"
                                         style="background-color: #f8fafc;"
