--- a/10.2.0/angular/src/app/emergency/emergency-prescriptions/emergency-prescriptions.component.html
+++ b/10.2.0/angular/src/app/emergency/emergency-prescriptions/emergency-prescriptions.component.html
@@ -57,22 +57,22 @@
                         [paginator]="false" [lazy]="true" [tableStyle]="{ 'min-width': '50rem' }">
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="min-width: 150px" pSortableColumn="patientName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="patientName">
                                     Patient
                                     <p-sortIcon field="patientName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
                                     Doctor
                                     <p-sortIcon field="doctorName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Date
                                     <!-- <p-sortIcon field="name"></p-sortIcon> pSortableColumn="name" -->
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Medications
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     {{ 'Actions' | localize }}
                                 </th>
                             </tr>
@@ -80,7 +80,7 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td>
+                                <td class="text-center">
                                     <p-avatar [label]="getShortName(record.patient?.fullName)" class="mr-1"
                                         size="small" />
                                     <span>
@@ -95,12 +95,12 @@
                                         {{ record.doctor?.fullName|| 'Admin' }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.issueDate| date: 'dd/MM/yyyy' }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <div *ngIf="record.items.length>0">
                                         <div *ngFor="let itm of record.items">
                                             <span>{{ itm.medicineName}} {{itm.dosage}} ({{itm.frequency}})</span>
@@ -108,7 +108,7 @@
                                     </div>
                                     <div *ngIf="record.items.length<=0">NA</div>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
                                         (click)="rowMenu.toggle($event); selectedRecord = record">
                                     </button>
