--- a/10.2.0/angular/src/app/master-table/appointment-types/appointment-types.component.html
+++ b/10.2.0/angular/src/app/master-table/appointment-types/appointment-types.component.html
@@ -34,20 +34,20 @@
             <!-- Header -->
             <ng-template pTemplate="header">
               <tr>
-                <th pSortableColumn="name" style="min-width: 150px">Name <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="fee" style="min-width: 150px">Fee <p-sortIcon field="fee"></p-sortIcon></th>
-                <th pSortableColumn="description" style="min-width: 150px">Description <p-sortIcon field="description"></p-sortIcon></th>
-                <th style="min-width: 130px">Actions</th>
+                <th class="text-center" pSortableColumn="name" style="min-width: 150px">Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th class="text-center" pSortableColumn="fee" style="min-width: 150px">Fee <p-sortIcon field="fee"></p-sortIcon></th>
+                <th class="text-center" pSortableColumn="description" style="min-width: 150px">Description <p-sortIcon field="description"></p-sortIcon></th>
+                <th class="text-center" style="min-width: 130px">Actions</th>
               </tr>
             </ng-template>
 
             <!-- Body -->
             <ng-template pTemplate="body" let-appointmentType>
               <tr>
-                <td>{{ appointmentType.name }}</td>
-                <td>{{ appointmentType.fee }}</td>
-                <td>{{ appointmentType.description }}</td>
-                <td>
+                <td class="text-center">{{ appointmentType.name }}</td>
+                <td class="text-center">{{ appointmentType.fee }}</td>
+                <td class="text-center">{{ appointmentType.description }}</td>
+                <td class="text-center">
                   <button class="btn btn-sm border rounded-1 px-3"
                           type="button"
                           (click)="rowMenu.toggle($event); selectedRecord = appointmentType">
