--- a/10.2.0/angular/src/app/master-table/department/department.component.html
+++ b/10.2.0/angular/src/app/master-table/department/department.component.html
@@ -27,20 +27,27 @@
             <!-- Header -->
             <ng-template pTemplate="header">
               <tr>
-                <th style="min-width: 150px">Name</th>
-                <th style="min-width: 150px">Department Type</th>
-                <th style="min-width: 100px">IsActive</th>
-                <th style="min-width: 130px">Actions</th>
+                <th class="text-center" style="min-width: 150px">Name</th>
+                <th class="text-center" style="min-width: 150px">Department Type</th>
+                <th class="text-center" style="min-width: 100px">IsActive</th>
+                <th class="text-center" style="min-width: 130px">Actions</th>
               </tr>
             </ng-template>
 
             <!-- Body -->
             <ng-template pTemplate="body" let-department>
               <tr>
-                <td>{{ department.departmentName }}</td>
-                <td>{{ department.departmentType === 0 ? 'Doctor' : 'Lab Technician' }}</td>
-                <td>{{ department.isActive === true ? 'Yes' : 'No' }}</td>
-                <td>
+                <td class="text-center">{{ department.departmentName }}</td>
+                <td class="text-center">{{ department.departmentType === 0 ? 'Doctor' : 'Lab Technician' }}</td>
+                <td class="text-center">
+                  <span *ngIf="department.isActive; else inactive">
+                    <i class="pi pi-check-circle text-success fs-5"></i>
+                  </span>
+                  <ng-template #inactive>
+                    <i class="pi pi-times-circle text-danger fs-5"></i>
+                  </ng-template>
+                </td>
+                <td class="text-center">
                   <!-- Row Menu -->
                   <button class="btn btn-sm border rounded-1 px-3" type="button"
                     (click)="rowMenu.toggle($event); selectedRecord = department">
