--- a/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
+++ b/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
@@ -27,18 +27,18 @@
                         <!-- Header -->
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="min-width: 150px">Name</th>
-                                <th style="min-width: 150px">Fee</th>
-                                <th style="min-width: 130px">Actions</th>
+                                <th class="text-center" style="min-width: 150px">Name</th>
+                                <th class="text-center" style="min-width: 150px">Fee</th>
+                                <th class="text-center" style="min-width: 130px">Actions</th>
                             </tr>
                         </ng-template>
 
                         <!-- Body -->
                         <ng-template pTemplate="body" let-doctor>
                             <tr>
-                                <td>{{ doctor.doctor.fullName }}</td>
-                                <td>{{ doctor.fee }}</td>
-                                <td>
+                                <td class="text-center">{{ doctor.doctor.fullName }}</td>
+                                <td class="text-center">{{ doctor.fee }}</td>
+                                <td class="text-center">
                                     <!-- Row Menu -->
                                     <button class="btn btn-sm border rounded-1 px-3" type="button"
                                         (click)="rowMenu.toggle($event); selectedRecord = doctor">
