--- a/10.2.0/angular/src/app/master-table/emergency-charges/emergency-charges.component.html
+++ b/10.2.0/angular/src/app/master-table/emergency-charges/emergency-charges.component.html
@@ -23,13 +23,13 @@
                         [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Title
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     Charge
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     Action
                                 </th>
                             </tr>
@@ -37,26 +37,26 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.title}}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.fee }}
                                     </span>
                                 </td>
-                                <td>
-                  <!-- Row Menu -->
-                  <button class="btn btn-sm border rounded-1 px-3" type="button"
-                    (click)="rowMenu.toggle($event); selectedRecord = record">
-                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                  </button>
-                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px','max-width':'160px'}"
-                    [model]="editDeleteMenus" appendTo="body">
-                  </p-menu>
-                </td>
+                                <td class="text-center">
+                                    <!-- Row Menu -->
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px','max-width':'160px'}"
+                                        [model]="editDeleteMenus" appendTo="body">
+                                    </p-menu>
+                                </td>
                             </tr>
                         </ng-template>
                     </p-table>
