--- a/10.2.0/angular/src/app/master-table/health-package/health-package.component.html
+++ b/10.2.0/angular/src/app/master-table/health-package/health-package.component.html
@@ -4,13 +4,11 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <p-breadcrumb [model]="items"></p-breadcrumb>
       <div class="btn-toolbar">
-        <button type="button" class="btn btn-md refresh-btn mr-2"
-                pTooltip="Refresh" tooltipPosition="top"
-                (click)="list()">
+        <button type="button" class="btn btn-md refresh-btn mr-2" pTooltip="Refresh" tooltipPosition="top"
+          (click)="list()">
           <span class="pi pi-refresh"></span>
         </button>
-        <button type="button" class="btn btn-md add-btn"
-                (click)="createHealthPackage()">
+        <button type="button" class="btn btn-md add-btn" (click)="createHealthPackage()">
           <span class="pi pi-plus-circle mr-2"></span> Add
         </button>
       </div>
@@ -22,63 +20,58 @@
     <div class="container-fluid">
       <div class="card table-wrapper">
         <div class="card-body">
-          <p-table #dataTable [value]="primengTableHelper.records"
-                   [lazy]="true"
-                   (onLazyLoad)="list($event)"
-                   [paginator]="false"
-                   [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                   [tableStyle]="{'min-width':'40rem'}"
-                   sortMode="multiple">
+          <p-table #dataTable [value]="primengTableHelper.records" [lazy]="true" (onLazyLoad)="list($event)"
+            [paginator]="false" [rows]="primengTableHelper.defaultRecordsCountPerPage"
+            [tableStyle]="{'min-width':'40rem'}" sortMode="multiple">
 
             <!-- Header -->
             <ng-template pTemplate="header">
               <tr>
-                <th>Package Name</th>
-                <th>Price</th>
-                <th>No. of Reports</th>
-                <th>Active</th>
-                <th style="width:80px">Actions</th>
+                <th class="text-center">Package Name</th>
+                <th class="text-center">Price</th>
+                <th class="text-center">No. of Reports</th>
+                <th class="text-center">Active</th>
+                <th class="text-center" style="width:80px">Actions</th>
               </tr>
             </ng-template>
 
             <!-- Body -->
             <ng-template pTemplate="body" let-package>
               <tr>
-                <td>{{ package.packageName }}</td>
-                <td>{{ package.packagePrice | number:'1.2-2' }}</td>
-                <td>{{ package.labReportsTypes?.length || 0 }}</td>
-                <td>
-                  <span [ngClass]="{'text-success': package.isActive, 'text-danger': !package.isActive}">
-                    {{ package.isActive ? 'Yes' : 'No' }}
+                <td class="text-center">{{ package.packageName }}</td>
+                <td class="text-center">{{ package.packagePrice | number:'1.2-2' }}</td>
+                <td class="text-center">{{ package.labReportsTypes?.length || 0 }}</td>
+                <td class="text-center">
+                  <span *ngIf="package.isActive; else inactive">
+                    <i class="pi pi-check-circle text-success fs-5"></i>
                   </span>
+                  <ng-template #inactive>
+                    <i class="pi pi-times-circle text-danger fs-5"></i>
+                  </ng-template>
                 </td>
-                <td>
+                <td class="text-center">
                   <button class="btn btn-sm border rounded-1 px-3 mr-1" type="button"
-                          (click)="rowMenu.toggle($event); selectedRecord = package">
+                    (click)="rowMenu.toggle($event); selectedRecord = package">
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                   </button>
                   <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
-                          [model]="editDeleteMenus" appendTo="body"></p-menu>
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
                 </td>
               </tr>
             </ng-template>
           </p-table>
 
           <!-- No data -->
-          <div class="primeng-no-data text-center m-2"
-               *ngIf="primengTableHelper.totalRecordsCount === 0">
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
             No health packages found.
           </div>
         </div>
 
-          <p-paginator #paginator
-                       [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                       [totalRecords]="primengTableHelper.totalRecordsCount"
-                       (onPageChange)="list($event)"
-                       [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                       [showCurrentPageReport]="true"
-                       [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-          </p-paginator>
+        <p-paginator #paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
+          [totalRecords]="primengTableHelper.totalRecordsCount" (onPageChange)="list($event)"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
