--- a/10.2.0/angular/src/app/master-table/medicine-strength-type/medicine-strength-type.component.html
+++ b/10.2.0/angular/src/app/master-table/medicine-strength-type/medicine-strength-type.component.html
@@ -55,17 +55,24 @@
             (onLazyLoad)="list($event)" [tableStyle]="{'min-width':'40rem'}">
             <ng-template pTemplate="header">
               <tr>
-                <th>Name</th>
-                <th>Active</th>
-                <th style="width:80px">Actions</th>
+                <th class="text-center">Name</th>
+                <th class="text-center">Active</th>
+                <th class="text-center" style="width:80px">Actions</th>
               </tr>
             </ng-template>
 
             <ng-template pTemplate="body" let-strengthType>
               <tr>
-                <td>{{ strengthType.name }}</td>
-                <td>{{ strengthType.isActive ? 'Yes' : 'No' }}</td>
-                <td>
+                <td class="text-center">{{ strengthType.name }}</td>
+                <td class="text-center">
+                  <span *ngIf="strengthType.isActive; else inactive">
+                    <i class="pi pi-check-circle text-success fs-5"></i>
+                  </span>
+                  <ng-template #inactive>
+                    <i class="pi pi-times-circle text-danger fs-5"></i>
+                  </ng-template>
+                </td>
+                <td class="text-center">
                   <!-- Row Menu -->
                   <button class="btn btn-sm border rounded-1 px-2" type="button"
                     (click)="rowMenu.toggle($event); selectedRecord = strengthType">
