--- a/10.2.0/angular/src/app/master-table/room-facilities/room-facilities.component.html
+++ b/10.2.0/angular/src/app/master-table/room-facilities/room-facilities.component.html
@@ -33,16 +33,16 @@
             <!-- Header -->
             <ng-template pTemplate="header">
               <tr>
-                <th style="min-width: 150px">Name</th>
-                <th style="width:80px">Actions</th>
+                <th class="text-center" style="min-width: 150px">Name</th>
+                <th class="text-center" style="width:80px">Actions</th>
               </tr>
             </ng-template>
 
             <!-- Body -->
             <ng-template pTemplate="body" let-facility>
               <tr>
-                <td>{{ facility.facilityName }}</td>
-                <td>
+                <td class="text-center">{{ facility.facilityName }}</td>
+                <td class="text-center">
                   <!-- Row Menu -->
                   <button class="btn btn-sm border rounded-1 px-3" type="button"
                           (click)="rowMenu.toggle($event); selectedRecord = facility">
