--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -58,27 +58,27 @@
                         (onLazyLoad)="list($event)">
                         <ng-template #header>
                             <tr>
-                                <th style="min-width: 150px" pSortableColumn="patientName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="patientName">
                                     Patient
                                     <p-sortIcon field="patientName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px" pSortableColumn="doctorName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="doctorName">
                                     Doctor
                                     <p-sortIcon field="doctorName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Appointment Type
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Date & Time
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     Status
                                 </th>
-                                <th style="min-width: 100px">
+                                <th class="text-center" style="min-width: 100px">
                                     Payment Status
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     Actions
                                 </th>
                             </tr>
@@ -86,7 +86,7 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td>
+                                <td class="text-center">
                                     <p-avatar [label]="getShortName(record.patient?.fullName)"
                                         [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1"
                                         size="small">
@@ -94,7 +94,7 @@
                                     {{ record.patient?.fullName }}
                                 </td>
 
-                                <td>
+                                <td class="text-center">
                                     <p-avatar [label]="getShortName(record.doctor?.fullName)"
                                         [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1"
                                         size="small">
@@ -102,20 +102,20 @@
                                     Dr. {{ record.doctor?.fullName }}
                                 </td>
 
-                                <td>
+                                <td class="text-center">
                                     {{ record.appointmentType?.name }}
                                 </td>
 
-                                <td>
+                                <td class="text-center">
                                     <p class="m-0">{{ record.appointmentDate | date: 'dd/MM/yyyy' }}</p>
                                     <p class="m-0">{{ record.appointmentTimeSlot }}</p>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span [className]="getStatusSeverity(record.status)">
                                         <b>{{ getStatusLabel(record.status) }}</b>
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span *ngIf="record.isPaid; else unpaidTag" class="badge-soft-success p-1 rounded"
                                         [rounded]="true"><b>Paid</b>
                                     </span>
@@ -123,7 +123,7 @@
                                         <span class="badge-soft-danger p-1 rounded" [rounded]="true"><b>UnPaid</b></span>
                                     </ng-template>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <button class="btn btn-sm border rounded-1 px-3" type="button"
                                         style="background-color: #f8fafc;"
                                         (click)="rowMenu.toggle($event); selectedRecord = record">
