--- a/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
+++ b/10.2.0/angular/src/app/pharmacist/pharmacist-prescriptions/pharmacist-prescriptions.component.html
@@ -39,22 +39,22 @@
                         [paginator]="false" [lazy]="true" [tableStyle]="{ 'min-width': '50rem' }">
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="min-width: 150px" pSortableColumn="patientName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="patientName">
                                     Patient Name
                                     <p-sortIcon field="patientName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px" pSortableColumn="nurseName">
+                                <th class="text-center" style="min-width: 150px" pSortableColumn="nurseName">
                                     Prescribed By
                                     <p-sortIcon field="nurseName"></p-sortIcon>
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Issue Date
                                     <!-- <p-sortIcon field="name"></p-sortIcon> pSortableColumn="name" -->
                                 </th>
-                                <th style="min-width: 150px">
+                                <th class="text-center" style="min-width: 150px">
                                     Collection Status
                                 </th>
-                                <th style="min-width: 130px">
+                                <th class="text-center" style="min-width: 130px">
                                     {{ 'Actions' | localize }}
                                 </th>
                             </tr>
@@ -62,27 +62,27 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.patientName }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.doctorName }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span>
                                         {{ record.issueDate| date: 'dd/MM/yyyy' }}
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <span [className]="getStatusSeverity(record.collectionStatus)">
                                         <b>{{ getStatusLabel(record.collectionStatus) }}</b>
                                     </span>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <button class="btn btn-sm border rounded-1 px-3" type="button"
                                         style="background-color: #f8fafc;"
                                         (click)="rowMenu.toggle($event); selectedRecordForView = record">
